1.0b9
-----
* Prompts in the importer interface are now colorized for easy
  reading. The default option is always highlighted.
* The import logger has been improved for "always-on" use. First,
  it is now possible to specify a log file in .beetsconfig. Also,
  logs are now appended rather than overwritten and contain
  timestamps.
* Album art fetching and plugin events are each now run in separate
  pipeline stages during imports. This should bring additional
  performance when using album art plugins like embedart or
  beets-lyrics.
* Accents and other Unicode decorators on characters are now treated
  more fairly by the autotagger. For example, if you're missing the
  acute accent on the "e" in "cafe", that change won't be penalized.
  This introduces a new dependency on the "unidecode" Python module.
* Fixed a problem where duplicate albums or items imported at the same
  time would fail to be detected.
* BPD now uses a persistent "virtual filesystem" in order to fake a
  directory structure. This means that your path format settings are
  respected in BPD's browsing hierarchy. This may come at a performance
  cost, however. The virtual filesystem used by BPD is available for
  reuse by plugins (e.g., the FUSE plugin).
* Singleton imports ("beet import -s") can now take individual files as
  arguments as well as directories.
* Fix crash when autotagging files with no metadata.
* Fix a rare deadlock when finishing the import pipeline.

1.0b8
-----
* Better support for singleton (non-album) tracks. Whereas beets
  previously only really supported full albums, now it can also keep
  track of individual, off-album songs. The "singleton" path format
  can be used to customize where these tracks are stored. To import
  singleton tracks, provide the -s switch to the import command or,
  while doing a normal full-album import, choose the "as Tracks" (T)
  option to add singletons to your library. To list only singleton or